# opensage-acp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  TESTING.md  mkdocs.yml  pyproject.toml  release-please-config.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: cd.yml  ci.yml
docs/: acpx_protocol.md  architecture.md  configuration.md  getting-started.md  index.md  opensage_api.md
docs/adr/: 0001-http-bridge-to-opensage-web.md  0002-one-instance-per-session.md  0003-toml-config-per-session-for-mcp.md  0004-session-resume-via-opensage-resume.md  0005-shared-neo4j-memory.md  0006-no-cross-session-agent-sharing.md  0007-target-opensage-agent-opensage-repo.md  0008-test-strategy.md  0009-adk-event-translation.md  0010-session-lifecycle-management.md  0011-toml-config-orchestration.md
examples/: default_config.toml
examples/agent/: agent.py
scripts/: echo_adapter.py
src/opensage_acp/: __init__.py  bridge.py  cli.py  config.py  protocol.py  server.py
tests/: conftest.py  mock_opensage_server.py  test_bridge.py  test_cli.py  test_config.py  test_e2e.py  test_e2e_integration.py  test_protocol.py  test_server.py
tests/fixtures/adk_events/: error_event.json  function_call.json  function_response.json  stop_sentinel.json  text_final.json  text_partial.json
