[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opensage-acp"
version = "0.2.0"
description = "ACP adapter that exposes opensage as an external coding agent via acpx"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Ariel Arevalo", email = "arielarevalo@users.noreply.github.com" }]
keywords = ["acp", "opensage", "acpx", "openclaw", "agent", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "agent-client-protocol>=0.8.0",
    "anyio>=4.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "tomli-w>=1.0",
]

[project.urls]
Homepage = "https://arielarevalo.github.io/opensage-acp/"
Documentation = "https://arielarevalo.github.io/opensage-acp/"
Repository = "https://github.com/arielarevalo/opensage-acp"
Issues = "https://github.com/arielarevalo/opensage-acp/issues"
Changelog = "https://github.com/arielarevalo/opensage-acp/blob/main/CHANGELOG.md"

[project.scripts]
opensage-acp = "opensage_acp.cli:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "fastapi>=0.100",
    "uvicorn>=0.20",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opensage_acp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
